# QuantNado

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  python-tests.yml
QuantNado/: call_quantile_peaks.py  cli.py  core.py
QuantNado.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py
