[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantNado"
description = "Quantile-based peak calling from RPKM bigWig files"
authors = [
    { name = "Catherine Chahrour", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "crested",
    "loguru",
    "numpy",
    "pandas",
    "pyranges",
    "torch",

]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
QuantNado = "QuantNado.cli:main"

[tool.setuptools]
packages = ["QuantNado"]
